# tetrisgame

./: .gitignore  Cargo.toml  block_disppaer.txt  last_log.txt  log_1.txt  output  readme.md
assets/texture/: block_spritesheet.ron  pane_spritesheet.ron
config/: blocks.ron  display.ron  display_pane.ron  input.ron
src/: commons.rs  component.rs  config.rs  consts.rs  events.rs  main.rs  state.rs  system.rs  utils.rs  world.rs
src/component/: dyn_block.rs  stt_block.rs
src/state/: game_over.rs  loading_state.rs  main_state.rs
src/system/: collapse_system.rs  env_allocator.rs  gravity_system.rs  keyinput_system.rs  physics_allocator.rs  physics_executor.rs  physics_system.rs  put_inside.rs  spawner_system.rs  stack_system.rs
src/world/: block_data.rs  block_handler.rs  blockage.rs  collapse_status.rs  gravity_status.rs  input_cache.rs  key_int.rs  physics_interruption.rs  physics_queue.rs  score_text.rs  stack_status.rs
