[package]
name = "tetris"
version = "0.1.0"
authors = ["육심현 <simoncreek@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.6.0"

[dependencies.amethyst]
version ="0.15.0"
features = ["vulkan"]
